--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <style>
       body {
-        padding: 50px;
+        margin: 100px;
+        max-width: 1280px;
+        max-height: 600px;
       }
     </style>
   </head>
-  <body>
-  </body>
+  <body></body>
 </html>
